// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge/> should have the right class names when variant default and have a custom class 1`] = `
<span
  className="slds-badge slds-badge_default custom-class"
  style={Object {}}
>
  Badge label
</span>
`;

exports[`<Badge/> should have the right class names when variant inverse 1`] = `
<span
  className="slds-badge slds-badge_inverse"
  style={Object {}}
>
  Inverse Badge
</span>
`;

exports[`<Badge/> should have the right class names when variant lightest 1`] = `
<span
  className="slds-badge slds-badge_lightest"
  style={Object {}}
>
  Lightest Badge
</span>
`;

exports[`<Badge/> should render an icon on the left when iconName is passed 1`] = `
<span
  className="slds-badge slds-badge_default"
  style={Object {}}
>
  <span
    className="slds-icon_container slds-m-right_xx-small"
    style={Object {}}
  >
    <svg
      aria-hidden={true}
      className="slds-icon slds-icon_xx-small slds-icon-text-default"
      style={Object {}}
    >
      <use
        xlinkHref="/icons/utility-sprite/svg/symbols.svg#world"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </span>
  Lightest Badge
</span>
`;

exports[`<Badge/> should render an icon on the right when iconName is passed and iconPosition is right 1`] = `
<span
  className="slds-badge slds-badge_default"
  style={Object {}}
>
  Lightest Badge
  <span
    className="slds-icon_container slds-m-left_xx-small"
    style={Object {}}
  >
    <svg
      aria-hidden={true}
      className="slds-icon slds-icon_xx-small slds-icon-text-default"
      style={Object {}}
    >
      <use
        xlinkHref="/icons/utility-sprite/svg/symbols.svg#world"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </span>
</span>
`;
